; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_val_kentry.c_kd_get_flags.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_val_kentry.c_kd_get_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.packed_rrset_data = type { i32*, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.packed_rrset_data*, i64)* @kd_get_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kd_get_flags(%struct.packed_rrset_data* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.packed_rrset_data*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.packed_rrset_data* %0, %struct.packed_rrset_data** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.packed_rrset_data*, %struct.packed_rrset_data** %4, align 8
  %8 = getelementptr inbounds %struct.packed_rrset_data, %struct.packed_rrset_data* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load i64, i64* %5, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = icmp slt i32 %12, 4
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %27

15:                                               ; preds = %2
  %16 = load %struct.packed_rrset_data*, %struct.packed_rrset_data** %4, align 8
  %17 = getelementptr inbounds %struct.packed_rrset_data, %struct.packed_rrset_data* %16, i32 0, i32 1
  %18 = load i64*, i64** %17, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr inbounds i64, i64* %18, i64 %19
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %21, 2
  %23 = call i32 @memmove(i32* %6, i64 %22, i32 2)
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @ntohs(i32 %24)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %6, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %15, %14
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @memmove(i32*, i64, i32) #1

declare dso_local i32 @ntohs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
